# MonoLogic-DataCollector

./: .env  .gitignore  README.md  buildesp.sh  docker-compose.yml  package-lock.json
.devcontainer/: devcontainer.json  install.sh
.github/: README.md
.github/workflows/: README.md  deploy.yaml
backend/: .env  .gitignore  Dockerfile  README.md  build.gradle.kts  readme.md
backend/src/main/java/com/systemintegration/backend/: SystemIntegrationIoTBackendApplication.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/systemintegration/backend/: SystemIntegrationIoTBackendApplicationTests.java
devices/: readme.md
esp32/: .gitignore  CMakeLists.txt  README.md  settings.sh
esp32/main/: CMakeLists.txt  Kconfig.projbuild  dht11.c  dht11.h  https.c  https.h  main.c  mqtt.c  mqtt.h  usb.c  wifi.c  wifi.h
esp32/main/include/: dht11.h  https.h  usb.h  wifi.h
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  quasar.config.js  readme.md  tsconfig.json
frontend/src/boot/: axios.ts
frontend/src/components/: DeviceDataPanel.vue  HeaderContent.vue  LoadingScreen.vue  StationDataPanel.vue
frontend/src/css/: app.scss  quasar.variables.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: IndexPage.vue
iot-devices/: readme.md
nginx/: README.md  nginx.conf
nginx/ssl/: localhost-dev.crt  localhost-dev.key  localhost.crt  localhost.key  skippings.com-prod.crt  skippings.com-prod.key
station/main/: main.c  station_example_main.c  wifi.h
(+12 files in other folders)
